Add  a navbar including icons

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,8 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-  <a class="navbar-brand" href="#">
-  <img src="/src/assets/bootstrap-solid.svg" width="30" height="30" class="d-inline-block align-top" alt="" loading="lazy">MrPau Softwares</a>
+  <a class="navbar-brand" href="#logo">
+  <img src="assets/mrpau_logo.png" width="30" height="30" class="d-inline-block align-top" alt="" loading="lazy">
+  MrPau Softwares
+  </a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -10,27 +12,31 @@
         <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Link</a>
-      </li>
-      <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          Dropdown
-        </a>
-        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" href="#">Action</a>
-          <a class="dropdown-item" href="#">Another action</a>
-          <div class="dropdown-divider"></div>
-          <a class="dropdown-item" href="#">Something else here</a>
-        </div>
+        <a class="nav-link" href="#">Documentation </a>
       </li>
       <li class="nav-item">
-        <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+        <a class="nav-link" href="#">About team </a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">Projects </a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">Link </a>
       </li>
     </ul>
-    <form class="form-inline my-2 my-lg-0">
-      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-    </form>
+  <ul class="navbar-nav mr-auto ml-md-auto">
+    <li class="nav-item active">
+      <a class="nav-link pl-2 pr-1 mx-1 py-3 my-n2" href="https://web.facebook.com/mrpau.softwares/" target="_blank" rel="noopener" aria-label="Facebook" >
+      <img src="assets/fb-logo.png" width="17" height="17" class="d-inline-block align-top" alt="" loading="lazy">
+      <span class="sr-only">(current)</span>
+      </a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link pl-2 pr-1 mx-1 py-3 my-n2" href="https://github.com/mrpau" target="_blank" rel="noopener" aria-label="GitHub" >
+      <img src="assets/github.png" width="17" height="17" class="d-inline-block align-top" alt="" loading="lazy">
+      </a>
+    </li>
+  </ul>
   </div>
 </nav>
 <router-outlet></router-outlet>
